@@ -33,8 +33,15 @@
 # or, for all ports and proto:
 #
 # the.rdns.com 0
-evil.dns.3rad.ca 22 2500 80
+#evil.dns.3rad.ca 22 2500 80
 #not.a.real.host 0
+
+# rlynk's hostnames
 home-lynk.dns.3rad.ca 0
+captain.3rad.ca 22
+
+# it is recommended you leave your web server in here. 
+# ssh is included by default but can be removed once
+# proper rules have been configured.
 0.0.0.0 80 443 22
-no.resolve.3rad.ca 22
+
