@@ -26,7 +26,7 @@
 #define TYPE_IPCOP 		0x002
 
 //#define FORKING 0 // set to 0 to stay in forground, ie, testing
-#define NEEDROOT 0 // set to 0 for basic testing to avoid root check
+#define NEEDROOT 1 // set to 0 for basic testing to avoid root check
 
 int load_config(void);
 int valid_hostname(const char *);
