@@ -13,7 +13,7 @@
     #define DEBUG_NONE		0x00
     #define DEBUG_NOTICE 	0x01 //notice
     #define DEBUG_ERROR 	0x02 //error, console warn, will always die!
-    #define DEBUG_WARNING 0x04
+    #define DEBUG_WARNING 	0x04
     #define DEBUG_INFO 		0x08
     #define DEBUG_DEBUG 	0x10
     #define DEBUG_TRACE 	0x20
